syntax = "proto3";

option go_package = "./pkg/apiclient/protoapi";

enum EventTypes {
  EVENT_TEAM_UPDATED = 0;
  EVENT_RECONCILER_ENABLED = 1;
  EVENT_RECONCILER_DISABLED = 2;
  EVENT_RECONCILER_CONFIGURED = 3;
  EVENT_SYNC_ALL_TEAMS = 4;
  EVENT_TEAM_DELETED = 5;
}

message EventTeamUpdated {
  string slug = 1;
}

message EventTeamDeleted {
  string slug = 1;
}

message EventReconcilerEnabled {
  string reconciler = 1;
}

message EventReconcilerDisabled {
  string reconciler = 1;
}

message EventReconcilerConfigured {
  string reconciler = 1;
}

message EventSyncAllTeams {}
